messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-blue
  labels:
    app: messaging-app
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app
      version: blue
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1   # ensures at least one pod always runs
      maxSurge: 1         # creates one extra pod during update
  template:
    metadata:
      labels:
        app: messaging-app
        version: blue
    spec:
      containers:
      - name: messaging-app
        image: lewismurimi/messaging_app_image:2.0   # <-- updated version
        ports:
        - containerPort: 8000
