messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: messaging.local   # custom hostname (we'll map it in /etc/hosts)
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: django-app-service   # must match your Service name
                port:
                  number: 8000             # port your Django app listens on
